# chess-cli

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  TODO  main.c
src/: board.c  board.h  game.c  game.h  main.c  piece.c  piece.h
